transações e refactor
