# app/controllers/accountController.js
@@ -1,13 +1,10 @@
 const Account = require("../models/accountModel.js");
+const User = require("../models/userModel.js");
+const Transaction = require("../models/transactionModel.js");
+const { check, body, validationResult } = require('express-validator')
 
-// cria um novo usuário na base de dados
-exports.create = (req, res) => {
-    if (!req.body) {
-        res.status(400).send({
-            message: "VERIFIQUE OS DADOS INFORMADOS!"
-        });
-    }
 
+exports.create = async (req, res) => {
     const account = new Account({
         userId: req.body.userId,
         balance: req.body.balance,
@@ -16,81 +13,181 @@ exports.create = (req, res) => {
         type: req.body.type
     });
 
-    account.create((error, data) => {
-        if (error)
-            res.status(500).send({
-                message:
-                    error.message || "ERRO AO TETNAR CRIAR CONTA."
+
+    try {
+        const userExists = await User.userExists(req.body.userId);
+        if (!userExists) {
+            res.status(404).send({
+                message: "PESSOA INFORMADA NÃO EXISTE NA BASE. VERIFIQUE userId!"
             });
-        else res.status(201).send(data);
-    });
+            return;
+        }
+
+        const response = await account.create();
+        res.status(201).send(response);
+
+    } catch (error) {
+        res.status(500).send({
+            message: error.message || "ERRO AO TENTAR CRIAR O USUÁRIO."
+        });
+    }
+
 };
 
 
-exports.getBalance = (req, res) => {
-
-    if (!req.params.accountId || isNaN(req.params.accountId)) {
-        res.status(400).send({
-            message: "VERIFIQUE OS DADOS INFORMADOS!"
-        });
+exports.getBalance = async (req, res) => {
+    try {
+        const balance = await Account.findBalanceByAccountId(req.params.accountId);
+        if (balance) {
+            res.send(balance);
+        } else {
+            res.status(404).send({ message: `NÃO ENCONTRAMOS A CONTA COM ID ${req.params.accountId}.` });
+            return;
+        }
+    } catch (error) {
+        res.status(500).send({ message: `ERRO AO TENTAR BUSCAR CONTA COM ID ${req.params.accountId}.` });
         return;
     }
 
-    Account.findBalanceByAccountId(req.params.accountId, (error, data) => {
-        if (error) {
-            if (error.statusCode === "404") {
-                res.status(404).send({
-                    message: `NÃO ENCONTRAMOS A CONTA COM ID ${req.params.accountId}.`
-                });
-            } else {
-                res.status(500).send({
-                    message: "ERRO AO TENTAR BUSCAR CONTA COM ID " + req.params.accountId
-                });
-            }
-        } else res.send(data);
-    });
 };
 
 // Altera o status da conta active (true|false)
-exports.changeStatus = (req, res) => {
-    if (!req.params.accountId || isNaN(req.params.accountId)
-        || (req.body.active != false && req.body.active != true)) {
-
-        res.status(400).send({
-            message: "VERIFIQUE OS DADOS INFORMADOS!"
-        });
-        return;
-    }
-    const active = req.body.active;
-    Account.updateById(
-        req.params.accountId,
-        active,
-        (err, data) => {
-            if (err) {
-                if (err.statusCode === "404") {
-                    res.status(404).send({
-                        message: `NÃO ENCONTRAMOS A CONTA COM ID ${req.params.accountId}.`
-                    });
-                } else {
-                    res.status(500).send({
-                        message: "ERROR AO TENTEAR ATUALIZAR CONTA COM ID " + req.params.accountId
-                    });
-                }
-            } else {
-                res.send(data);
-            }
+exports.changeStatus = async (req, res) => {
+    try {
+        const accountChanged = await Account.updateStatusById(req.params.accountId, req.body.active);
+        if (accountChanged) {
+            res.send(accountChanged);
+        } else {
+            res.status(404).send({ message: `NÃO ENCONTRAMOS A CONTA COM ID ${req.params.accountId}.` });
         }
-    );
+    } catch (error) {
+        res.status(500).send({ message: "ERROR AO TENTEAR ATUALIZAR CONTA COM ID " + req.params.accountId });
+    }
 };
 
 // transações saque e deposito
-exports.transaction = (req, res) => {
-    //buscar conta
-        //verificar se está ativa
-            //identificar se é saque comparar com o saldo
-                //sacar
-                    //devolver o saldo atual
-            //depositar
-                //devolver o saldo atual
+exports.transaction = async (req, res) => {
+    const { accountId, value} = req.body;
+    console.log(accountId);
+    if (value == 0) {
+        res.status(400).send({ message: "DEPOSITOS/SAQUES COM VALOR 0 NÃO SÃO VÁLIDOS" });
+        return;
+    }
+
+    try {
+        const account = await Account.getAccountById(accountId);
+        
+        if (!account) {
+            res.status(400).send({ message: `NÃO ENCONTRAMOS A CONTA COM ID ${req.body.accountId}.` });
+            return;
+        }
+
+        if (value > 0) {
+            //deposito
+            depositProcess(account, value, req, res);
+        } else {
+            //saque
+            retireProcess(account, value, req, res);
+        }
+    } catch (error) {
+        res.status(404).send({
+            message: "CONTA NÃO ENCONTRADA PARA O ID " + accountId
+        });
+    }
+
 };
 
+depositProcess = async (account, value, req, res) => {
+    var newBalance = account.balance + value;
+    try {
+        changedBalance = await Account.updateBalance(account.accountId, newBalance);
+        createTransaction(account.accountId, value);
+        res.status(200).send(changedBalance);
+        return;
+    } catch (error) {
+        console.log(error);
+        res.status(500).send({ message: `ERRO AO TENTAR EFETUAR DEPOSITO NA CONTA ${account.accountId}.` });
+        return;
+    }
+}
+
+
+retireProcess = async (account, value, req, res) => {
+    //todo testar saques diarios e active
+    if (account.balance >= (value * -1)) {
+        const newBalance = account.balance + (value);
+        try {
+            changedBalance = await Account.updateBalance(account.accountId, newBalance);
+            createTransaction(account.accountId, value);
+            res.status(200).send(changedBalance);
+            return;
+        } catch (error) {
+            res.status(500).send({ message: `ERRO AO TENTAR EFETUAR SAQUE NA CONTA ${account.accountId}.` });
+            return;
+        }
+    } else {
+        res.status(200).send({ message: "SAQUE NÃO REALIZADO, SALDO INSUFICIENTE." });
+    }
+}
+
+
+createTransaction = (accountId, value) => {
+    const transaction = new Transaction({
+        accountId,
+        value
+    });
+
+    transaction.create()
+}
+
+exports.getAllTransactions = async (req, res) => {
+    try {
+        const transactions = await Transaction.findAllTransactions(req.params.accountId)
+        res.status(400).send(transactions);
+    } catch (error) {
+        res.status(500).send({ message: "ERRO AO TENTAR BUSCAR TRANSAÇÕES DA CONTA " + req.params.accountId });
+        return;
+    }
+
+}
+
+
+exports.createAccountRules = () => {
+    return [
+        body('userId').isInt(),
+        body('balance').exists().isFloat(),
+        body('dailyLimit').exists().isFloat(),
+        body('active').exists().isBoolean(),
+        body('type').exists().isInt()
+    ]
+}
+
+exports.balanceAccountRules = () => {
+    return [
+        check('accountId').exists().isInt()
+    ]
+}
+
+exports.changeStatusAccountRules = () => {
+    return [
+        check('active').exists().isBoolean(),
+        check('accountId').exists().isInt()
+    ]
+}
+
+exports.transactionRules = () => {
+    return [
+        body('accountId').exists().isInt(),
+        body('value').exists().isFloat()
+    ]
+}
+
+exports.accountValidate = (req, res, next) => {
+    const errors = validationResult(req)
+    if (errors.isEmpty()) {
+        return next()
+    }
+
+    res.status(400).send({ message: "VERIFIQUE SUA REQUISIÇÃO!" });
+    return;
+}
